<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    android:orientation="vertical"
    tools:context=".AdminEditExerciseDialogFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/close_btn"
        android:layout_toEndOf="@id/close_btn">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/label_exercise_name"
                        android:labelFor="@+id/exercise_name"/>
                    <EditText
                        android:id="@+id/exercise_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:text="@string/label_muscle_groups"/>

                    <FrameLayout android:id="@+id/muscle_group_list_placeholder"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/muscle_group_error"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/holo_red_dark"
                        android:gravity="center_horizontal"
                        android:text="@string/muscle_groups_required"
                        android:visibility="gone"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@android:color/darker_gray"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:text="@string/label_equipment_types"/>

                    <FrameLayout android:id="@+id/equipment_type_list_placeholder"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/fitness_equipment_error"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/holo_red_dark"
                        android:gravity="center_horizontal"
                        android:text="@string/fitness_equipment_required"
                        android:visibility="gone"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/save_exercise_button"
                        style="?android:textAppearanceSmall"
                        android:background="@color/colorButtonBackground"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:enabled="true"
                        android:text="@string/action_save_exercise"/>

                    <Button
                        android:id="@+id/cancel_edit_button"
                        style="?android:textAppearanceSmall"
                        android:background="@color/colorButtonBackground"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/action_cancel_edit_exercise"/>
                </LinearLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </FrameLayout>

    <ImageView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/close_btn"
        android:src="@android:drawable/ic_menu_close_clear_cancel"
        android:focusable="true"
        android:clickable="true"
        android:layout_gravity="top|start"
        android:layout_marginEnd="4dp"
        android:contentDescription="@string/label_close_btn"/>

</RelativeLayout>