<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:orientation="vertical"
    tools:context=".AdminEquipmentTypeDialogFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/close_btn"
        android:layout_toEndOf="@id/close_btn">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@+id/equipment_type_name"
                android:text="@string/label_equipment_type_name" />

            <EditText
                android:id="@+id/equipment_type_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@+id/equipment_type_code"
                android:text="@string/label_equipment_type_code" />

            <EditText
                android:id="@+id/equipment_type_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="3"
                android:inputType="textCapCharacters" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal">

                <Button
                    android:id="@+id/save_equipment_type_button"
                    style="?android:textAppearanceSmall"
                    android:background="@color/colorButtonBackground"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/action_save_muscle_group" />

                <Button
                    android:id="@+id/cancel_edit_button"
                    style="?android:textAppearanceSmall"
                    android:background="@color/colorButtonBackground"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/action_cancel_edit_muscle_group" />
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>

    <ImageView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/close_btn"
        android:src="@android:drawable/ic_menu_close_clear_cancel"
        android:focusable="true"
        android:clickable="true"
        android:layout_gravity="top|start"
        android:layout_marginEnd="4dp"
        android:contentDescription="@string/label_close_btn"/>

</RelativeLayout>