<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout
    tools:context=".LoginActivity"
    android:background="@color/colorBackground"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <include layout="@layout/content_header_logo"/>

    <!-- Login progress -->

    <ProgressBar
        android:id="@+id/login_progress"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:visibility="gone"
        android:layout_marginBottom="8dp"
        style="?android:attr/progressBarStyleLarge"/>


    <ScrollView
        android:id="@+id/login_form"
        android:layout_height="match_parent"
        android:layout_width="match_parent" >


        <LinearLayout
            android:id="@+id/email_login_form"
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" >
            <com.google.android.material.textfield.TextInputLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent">
                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:inputType="textEmailAddress"
                    android:hint="@string/prompt_email"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent">
                <EditText
                    android:id="@+id/password"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:inputType="textPassword"
                    android:hint="@string/prompt_password"
                    android:imeOptions="actionUnspecified"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeActionId="6"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/recovery_email_status_message"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:visibility="gone"
                android:text="@string/status_recovery_email_sent"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:layout_width="match_parent">
                <Button
                    android:id="@+id/email_sign_in_button"
                    android:layout_height="match_parent"
                    android:layout_width="wrap_content"
                    style="?android:textAppearanceSmall"
                    android:text="@string/action_sign_in"
                    android:textStyle="bold"/>
                <Button
                    android:id="@+id/forgot_password_button"
                    android:layout_height="match_parent"
                    android:layout_width="wrap_content"
                    style="?android:textAppearanceSmall"
                    android:text="@string/action_forgot_password"
                    android:textStyle="bold"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" />
</LinearLayout>