<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout tools:context=".RegisterActivity" android:background="@color/colorBackground" android:paddingTop="@dimen/activity_vertical_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingBottom="@dimen/activity_vertical_margin" android:orientation="vertical" android:gravity="center_horizontal" android:layout_height="match_parent" android:layout_width="match_parent" xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android">
    <include layout="@layout/content_header_logo"/>

    <!-- Registration progress -->
    <ProgressBar
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:visibility="gone"
        android:layout_marginBottom="8dp"
        style="?android:attr/progressBarStyleLarge"
        android:id="@+id/registration_progress"/>
    <ScrollView android:layout_height="match_parent" android:layout_width="match_parent" android:id="@+id/registration_form">

        <LinearLayout android:orientation="vertical" android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/email_registration_form">
            <com.google.android.material.textfield.TextInputLayout android:layout_height="wrap_content" android:layout_width="match_parent">
                <AutoCompleteTextView android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/first_name" android:singleLine="true" android:maxLines="1" android:inputType="textPersonName" android:hint="@string/prompt_first_name"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout android:layout_height="wrap_content" android:layout_width="match_parent">
                <AutoCompleteTextView android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/last_name" android:singleLine="true" android:maxLines="1" android:inputType="textPersonName" android:hint="@string/prompt_last_name"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout android:layout_height="wrap_content" android:layout_width="match_parent">
                <AutoCompleteTextView android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/email" android:singleLine="true" android:maxLines="1" android:inputType="textEmailAddress" android:hint="@string/prompt_email"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout android:layout_height="wrap_content" android:layout_width="match_parent">
                <EditText android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/password" android:singleLine="true" android:maxLines="1" android:inputType="textPassword" android:hint="@string/prompt_password" android:imeOptions="actionUnspecified" android:imeActionLabel="@string/action_register" android:imeActionId="6"/>
            </com.google.android.material.textfield.TextInputLayout>
            <Button android:background="@color/colorButtonBackground" android:layout_height="wrap_content" android:layout_width="match_parent" style="?android:textAppearanceSmall" android:id="@+id/email_register_button" android:textStyle="bold" android:text="@string/action_register" android:layout_marginTop="16dp"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>